# 2A1B_Solver

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
rl2048/: __init__.py  curriculum.py  diagnostics.py  dqn_agent.py  env_alphabet2048.py  reward_shaper.py  utils.py
rl2048/scripts/: __init__.py  eval_dqn.py  train_dqn.py
scripts/: __init__.py  eval_dqn.py  inspect_checkpoint.py  train_dqn.py  web_bridge_dom.py
tests/: test_agent.py  test_edge_cases.py  test_enhancements.py  test_env.py
